logs/dag_id=clean_users_from_lake_dag/run_id=manual__2025-09-20T192750.832872+0000/task_id=load_users_to_postgres/attempt=1.log
[2025-09-20T19:28:03.250+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2025-09-20T19:28:03.271+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: clean_users_from_lake_dag.load_users_to_postgres manual__2025-09-20T19:27:50.832872+00:00 [queued]>
[2025-09-20T19:28:03.279+0000] {taskinstance.py:2612} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: clean_users_from_lake_dag.load_users_to_postgres manual__2025-09-20T19:27:50.832872+00:00 [queued]>
[2025-09-20T19:28:03.281+0000] {taskinstance.py:2865} INFO - Starting attempt 1 of 1
[2025-09-20T19:28:03.294+0000] {taskinstance.py:2888} INFO - Executing <Task(PythonOperator): load_users_to_postgres> on 2025-09-20 19:27:50.832872+00:00
[2025-09-20T19:28:03.305+0000] {standard_task_runner.py:104} INFO - Running: ['airflow', 'tasks', 'run', 'clean_users_from_lake_dag', 'load_users_to_postgres', 'manual__2025-09-20T19:27:50.832872+00:00', '--job-id', '18', '--raw', '--subdir', 'DAGS_FOLDER/clean_users_dag.py', '--cfg-path', '/tmp/tmpfs6ai9rq']
[2025-09-20T19:28:03.308+0000] {standard_task_runner.py:105} INFO - Job 18: Subtask load_users_to_postgres
[2025-09-20T19:28:03.316+0000] {logging_mixin.py:190} WARNING - /home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py:70 DeprecationWarning: This process (pid=107) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2025-09-20T19:28:03.319+0000] {standard_task_runner.py:72} INFO - Started process 118 to run task
[2025-09-20T19:28:03.398+0000] {task_command.py:467} INFO - Running <TaskInstance: clean_users_from_lake_dag.load_users_to_postgres manual__2025-09-20T19:27:50.832872+00:00 [running]> on host 48ee850a336d
[2025-09-20T19:28:03.496+0000] {taskinstance.py:3131} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='clean_users_from_lake_dag' AIRFLOW_CTX_TASK_ID='load_users_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2025-09-20T19:27:50.832872+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-09-20T19:27:50.832872+00:00'
[2025-09-20T19:28:03.498+0000] {taskinstance.py:731} INFO - ::endgroup::
[2025-09-20T19:28:03.545+0000] {taskinstance.py:3310} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/clean_users_dag.py", line 36, in load_task
    load_users(df)
  File "/opt/airflow/src/etl/load.py", line 10, in load_users
    cur.execute("""
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 8:             );
                    ^

[2025-09-20T19:28:03.572+0000] {taskinstance.py:1225} INFO - Marking task as FAILED. dag_id=clean_users_from_lake_dag, task_id=load_users_to_postgres, run_id=manual__2025-09-20T19:27:50.832872+00:00, execution_date=20250920T192750, start_date=20250920T192803, end_date=20250920T192803
[2025-09-20T19:28:03.584+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2025-09-20T19:28:03.585+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 18 for task load_users_to_postgres (syntax error at or near ")"
LINE 8:             );
                    ^
; 118)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 115, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3004, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3158, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3182, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 238, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 256, in execute_callable
    return runner.run(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/clean_users_dag.py", line 36, in load_task
    load_users(df)
  File "/opt/airflow/src/etl/load.py", line 10, in load_users
    cur.execute("""
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 8:             );
                    ^

[2025-09-20T19:28:03.617+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2025-09-20T19:28:03.636+0000] {taskinstance.py:3900} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-09-20T19:28:03.640+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
